# nix-diff-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
benches/: nixos_derivation.rs
src/: diff.rs  instantiate.rs  lib.rs  main.rs  parser.rs  render.rs  types.rs
tests/: common.rs  hello-v1.nix  hello-v2.nix  integration_test.rs  snapshot_test.rs
tests/hello-flake-v1/: default.nix  flake.nix
tests/hello-flake-v2/: default.nix  flake.nix
tests/snapshots/: snapshot_test__hello_diff_snapshot.snap  snapshot_test__hello_diff_with_context.snap  snapshot_test__identical_derivations.snap  snapshot_test__inline_highlight_snapshot.snap  snapshot_test__word_diff_orientation.snap
