[package]
name = "nix-diff"
version = "0.1.0"
edition = "2021"
authors = ["Joerg Thalheim <joerg@thalheim.io>"]
license = "BSD-3-Clause"
description = "Explain why two Nix derivations differ"
repository = "https://github.com/nix-community/nix-diff-rs"

[[bin]]
name = "nix-diff"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
similar = { version = "2.4", features = ["inline", "bytes", "text"] }
atty = "0.2"
tempfile = "3.8"
tinyjson = "2.5"
memchr = "2.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.8"
insta = "1.34"

[[bench]]
name = "nixos_derivation"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
