[package]
name = "nix-diff"
version = "0.1.0"
edition = "2021"
authors = ["Joerg Thalheim <joerg@thalheim.io>"]
license = "BSD-3-Clause"
description = "Explain why two Nix derivations differ"
repository = "https://github.com/nix-community/nix-diff-rs"

[[bin]]
name = "nix-diff"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
similar = { version = "2.7", features = ["bytes", "text"], default-features = false }
tempfile = { version = "3.23", default-features = false }
tinyjson = "2.5"
memchr = { version = "2.7", default-features = false, features = ["std"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = { version = "0.6", default-features = false }
tempfile = { version = "3.23", default-features = false }
insta = { version = "1.43", default-features = false }
regex = "1.12"

[[bench]]
name = "nixos_derivation"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
