[package]
name = "nix-diff"
version = "0.1.0"
edition = "2021"
authors = ["Joerg Thalheim <joerg@thalheim.io>"]
license = "BSD-3-Clause"
description = "Explain why two Nix derivations differ"
repository = "https://github.com/nix-community/nix-diff-rs"

[[bin]]
name = "nix-diff"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
harmonia-store-aterm = { git = "https://github.com/nix-community/harmonia", branch = "nix-2.34" }
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", branch = "nix-2.34" }
harmonia-utils-hash = { git = "https://github.com/nix-community/harmonia", branch = "nix-2.34" }
similar = { version = "3.0", features = ["bytes", "text", "inline"], default-features = false }
tempfile = { version = "3.27", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
tempfile = { version = "3.27", default-features = false }
insta = { version = "1.47", default-features = false }
regex = "1.12"

[[bench]]
name = "nixos_derivation"
harness = false

[patch.crates-io]
harmonia-store-aterm = { git = "https://github.com/nix-community/harmonia", branch = "nix-2.34" }
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", branch = "nix-2.34" }
harmonia-utils-hash = { git = "https://github.com/nix-community/harmonia", branch = "nix-2.34" }
harmonia-utils-base-encoding = { git = "https://github.com/nix-community/harmonia", branch = "nix-2.34" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
